<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Mobiliya Fleet</string>
    <string name="pref_upload_category_title">Data Upload</string>
    <string name="pref_upload_category" translatable="false">upload_category</string>
    <string name="pref_gps_category" translatable="false">gps_category</string>
    <string name="title_pref_obd">OBD Preferences</string>
    <string name="title_pref_commands">OBD Commands</string>
    <string name="title_pref_bluetooth" translatable="false">Bluetooth</string>
    <string name="title_pref_gps" translatable="false">GPS</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="error_file_location" tools:ignore="UnusedResources">Please check file on given sdcard location.</string>
    <string name="status_bluetooth_connecting">connecting&#8230;</string>
    <string name="status_bluetooth_connected">connected</string>
    <string name="status_obd_disconnected" tools:ignore="UnusedResources">disconnected</string>
    <string name="status_obd_connected">connected</string>
    <string name="status_obd_no_support">NA</string>
    <string name="pref_upload_title">Enable Data Upload</string>
    <string name="pref_upload_summaryOff">Enable http data upload</string>
    <string name="pref_upload_summaryOn">Disable http data upload</string>
    <string name="pref_upload_url_title">Upload URL</string>
    <string name="pref_upload_url_summary">POST URL that will accept real-time data</string>
    <string name="pref_vehicle_id_title">Vehicle ID</string>
    <string name="pref_vehicle_id_summary">Optional unique id of this vehicle, used with uploaded data</string>
    <string name="pref_bluetooth_title">Enable Bluetooth</string>
    <string name="pref_bluetooth_summaryOff">Turn on Bluetooth</string>
    <string name="pref_bluetooth_summaryOn">Turn off Bluetooth</string>
    <string name="pref_bluetooth_list_devices_summary">List of paired bluetooth devices.</string>
    <string name="pref_bluetooth_list_devices_title">Bluetooth Devices</string>
    <string name="pref_gps_category_title">Enable GPS</string>
    <string name="pref_gps_category_summaryOff">Turn on GPS</string>
    <string name="pref_gps_category_summaryOn">Turn off GPS</string>
    <string name="pref_gps_update_period_title">Update Period in Seconds</string>
    <string name="pref_gps_update_period_summary">The length of time between querying new position in seconds</string>
    <string name="pref_gps_distance_period_title">Update Period in Meters</string>
    <string name="pref_gps_distance_period_summary">Min Distance between location updates, in meters</string>
    <string name="pref_obd_protocols_title">OBD Protocol</string>
    <string name="pref_obd_protocols_summary">Select OBD Protocol to use</string>
    <string name="pref_imperial_units_title">Imperial Units</string>
    <string name="pref_imperial_units_summaryOff">Enable imperial units</string>
    <string name="pref_imperial_units_summaryOn">Go back to metric units</string>
    <string name="pref_obd_update_period_title">Update Period in Seconds</string>
    <string name="pref_obd_update_period_summary">The length of time between querying vehicle data in seconds</string>
    <string name="pref_max_fuel_econ_title">Maximum Fuel Economy Value</string>
    <string name="pref_max_fuel_econ_summary">Any fuel economy values larger than this will be thrown out</string>
    <string name="pref_volumetric_efficiency_dialog_title">Volumetric Efficiency (e.g. 0.85)</string>
    <string name="pref_volumetric_efficiency_summary">Used for fuel economy on vehicles without MAF sensor</string>
    <string name="pref_volumetric_efficiency_title">Volumetric Efficiency</string>
    <string name="pref_engine_displacement_title">Engine Displacement (liters)</string>
    <string name="pref_engine_displacement_summary">Used for fuel economy on vehicles without MAF sensor</string>
    <string name="pref_reader_config_title">Reader Config Commands</string>
    <string name="pref_reader_config_summary">Commands to configure bluetooth reader, separate with new line</string>
    <string name="title_pref_commands_summary">Select the commands you would like to see in real-time.</string>
    <string name="title_pref_commands_title">OBD Commands</string>
    <string name="title_pref_full_logging"> Full logging configuration </string>
    <string name="pref_enable_full_logging_summary"> Enables full offline logging with upload</string>
    <string name="pref_enable_full_logging_title"> Enable full logging </string>
    <string name="default_dirname_full_logging">OBDReaderLogs</string>
    <string name="pref_dirname_dialogTitle">Choose the name of the directory to save the logs</string>
    <string name="pref_dirname_title">Directory name</string>
    <string name="pref_dirname_summary">Name of the directory where to save the files</string>
    <string name="pref_dev_email_title">Developer Email</string>
    <string name="pref_dev_email_summary">Logs will be emailed to this address</string>
    <string name="prompt_email" tools:ignore="UnusedResources">Email</string>
    <string name="prompt_password" tools:ignore="UnusedResources">Password (optional)</string>
    <string name="action_sign_in" tools:ignore="UnusedResources">Sign in or register</string>
    <string name="action_sign_in_short" tools:ignore="UnusedResources">Sign in</string>
    <string name="error_invalid_email" tools:ignore="UnusedResources">This email address is invalid</string>
    <string name="error_invalid_password" tools:ignore="UnusedResources">This password is too short</string>
    <string name="error_incorrect_password" tools:ignore="UnusedResources">This password is incorrect</string>
    <string name="error_field_required" tools:ignore="UnusedResources">This field is required</string>
    <string name="permission_rationale" tools:ignore="UnusedResources">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="sign_in">Sign In</string>
    <string name="connect_devices">Connect Dongle</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="retry_scan">Retry scan</string>
    <string name="text_colon">:</string>
    <string name="not_connected">Not connected</string>
    <string name="pairing">Pairing…</string>
    <string name="paired">Paired</string>
    <string name="incorrect_credentials">Please enter valid credentials.</string>
    <string name="incorrect_company_name">Please enter valid company name.</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_header">Forgot Password? </string>
    <string name="adapter_connected">Adapter is connected</string>
    <string name="adapter_not_connected">Adapter not connected</string>
    <string name="connection_attempt">Connection Attempt</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="try_again">"Please try again later."</string>
    <string name="error_location">"Error in fetching location, try again later."</string>
    <string name="error_reset">"Error in resetting password."</string>
    <string name="new_password_send">new password send</string>
    <string name="vehicle_health">Health</string>
    <string name="vehicle_health_text">Vehicle Health</string>
    <string name="trips">Trips</string>
    <string name="term_conditions">By pressing \'sign in\' you agree to\n our terms &amp; conditions</string>
    <string name="location_settings">Location Settings</string>
    <string name="turn_on">Turn on</string>
    <string name="enter_your_email_address_to_request_n_password_reset">Enter your email address to request \npassword reset</string>
    <string name="reset_success">Reset Success</string>
    <string name="check_your_email_for_the_link_to_reset_n_your_password">Check your email for the link to reset \nyour password</string>
    <string name="fleet_management">Fleet Management</string>
    <string name="you_are_at">You are at</string>
    <string name="yout_driving_score">YOUR DRIVING SCORE</string>
    <string name="hard_braking">Hard Braking</string>
    <string name="speeding">Speeding</string>
    <string name="stops">Stops</string>
    <string name="fuel_used">Fuel Used</string>
    <string name="trip_time">Trip Time</string>
    <string name="miles_driven">Miles Driven</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="ongoingtrip">Ongoing Trip</string>
    <string name="stop_trip_dialog">Stop Trip!</string>
    <string name="do_want_to_stop_trip">Are you sure you want to stop this trip?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="trip_details">Trip Details</string>
    <string name="location">Locations</string>
    <string name="average_speed">Avg. Speed</string>
    <string name="topspeed">Top Speed</string>
    <string name="milage">Mileage</string>
    <string name="enginefaults">Engine Faults</string>
    <string name="aggresive_accelerator">Aggressive \nAccelator</string>
    <string name="phone_usage">Phone \nUsage</string>
    <string name="vehicle_info">Vehicle info</string>
    <string name="model">Model</string>
    <string name="brand_name">Brand Name</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="year_of_manufacture">Year of Manufacture</string>
    <string name="vehcile_registration_number">Vehicle Registration number</string>
    <string name="connected">Connected</string>
    <string name="telemetric_device">Telemetric Device</string>
    <string name="disconnected">Disconnected</string>
    <string name="paused">Resume</string>
    <string name="trip_paused">Trip has been paused</string>
    <string name="trip_stopped">Trip has been stopped</string>
    <string name="trip_started">Trip has been started</string>
    <string name="aunthentication_error">Authentication Error</string>
    <string name="error_occured">Failed to complete request due to some issues</string>
    <string name="skip">Skip</string>
    <string name="bmw_x5">BMW X5</string>
    <string name="mh_12_xe_1234">MH 12 XE 1234</string>
    <string name="year">YEAR</string>
    <string name="_2017">2017</string>
    <string name="color">COLOR</string>
    <string name="brown">Brown</string>
    <string name="fuel">FUEL</string>
    <string name="petrol">Petrol</string>
    <string name="tap_to_connect">tap to connect</string>
    <string name="_78" tools:ignore="UnusedResources">78</string>
    <string name="email">Email</string>
    <string name="about_us">About Us</string>
    <string name="user_information">User Information</string>
    <string name="vehicle_information">Vehicle Information</string>
    <string name="offline_storage">Offline Storage</string>
    <string name="data_sync_time">Data Sync Time</string>
    <string name="_email">Email</string>
    <string name="your_company_name">Your company name</string>
    <string name="vehicle_registration_number" tools:ignore="UnusedResources">Vehicle registration number</string>
    <string name="password">Password</string>
    <string name="mobiliya" tools:ignore="UnusedResources">Mobiliya</string>
    <string name="x5">X5</string>
    <string name="_0000_units">0000 UNITS</string>
    <string name="_97_0">97–0</string>
    <string name="active">Active</string>
    <string name="request">Request</string>
    <string name="do_you_want_end_trip">Do you want to stop trip ?</string>
    <string name="ok" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="click_ok" tools:ignore="Typos">Click ok</string>
    <string name="click_pause">Click pause</string>
    <string name="forgot_email_empty">user email should not be empty</string>
</resources>