<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context="com.mobiliya.fleet.activity.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/vehical_health_rec_gradient"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="@dimen/dim_30"
                tools:ignore="RtlHardcoded,RtlSymmetry">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dim_30">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/back_white"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <com.mobiliya.fleet.customViews.CustomTextViewMedium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dim_24"
                    android:text="@string/vehicle_info"
                    android:textColor="@color/text_color_white"
                    android:textSize="@dimen/font_24sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dim_25"
                    android:src="@drawable/car_image"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.mobiliya.fleet.customViews.CustomTextViewSemiBold
                    android:id="@+id/vehicle_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dim_12"
                    android:paddingTop="@dimen/dim_12"
                    android:textColor="@color/text_color_white"
                    android:textSize="@dimen/font_18sp" />

            </LinearLayout>
        </LinearLayout>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true"
            tools:context="com.mobiliya.fleet.activity.SettingsActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dim_30"
                android:paddingRight="@dimen/dim_30">

                <com.mobiliya.fleet.customViews.CustomTextViewRegular
                    android:id="@+id/brand_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_18"
                    android:textColor="@color/text_color_setting"
                    android:textSize="@dimen/font_16sp" />

                <com.mobiliya.fleet.customViews.CustomTextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brand_name"
                    android:textColor="@color/color_silver"
                    android:textSize="@dimen/font_14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/text_color_separator" />

                <com.mobiliya.fleet.customViews.CustomTextViewRegular
                    android:id="@+id/model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_18"
                    android:text="@string/x5"
                    android:textColor="@color/text_color_setting"
                    android:textSize="@dimen/font_16sp" />

                <com.mobiliya.fleet.customViews.CustomTextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/model"
                    android:textColor="@color/color_silver"
                    android:textSize="@dimen/font_14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/text_color_separator" />

                <com.mobiliya.fleet.customViews.CustomTextViewRegular
                    android:id="@+id/fuel_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_18"
                    android:text="@string/petrol"
                    android:textColor="@color/text_color_setting"
                    android:textSize="@dimen/font_16sp" />

                <com.mobiliya.fleet.customViews.CustomTextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fuel_type"
                    android:textColor="@color/color_silver"
                    android:textSize="@dimen/font_14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/text_color_separator" />

                <com.mobiliya.fleet.customViews.CustomTextViewRegular
                    android:id="@+id/year_manifacture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_18"
                    android:text="@string/_2017"
                    android:textColor="@color/text_color_setting"
                    android:textSize="@dimen/font_16sp" />

                <com.mobiliya.fleet.customViews.CustomTextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/year_of_manufacture"
                    android:textColor="@color/color_silver"
                    android:textSize="@dimen/font_14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/text_color_separator" />

                <com.mobiliya.fleet.customViews.CustomTextViewRegular
                    android:id="@+id/vehicle_registration_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_18"
                    android:textColor="@color/text_color_setting"
                    android:textSize="@dimen/font_16sp" />

                <com.mobiliya.fleet.customViews.CustomTextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vehcile_registration_number"
                    android:textColor="@color/color_silver"
                    android:textSize="@dimen/font_14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/text_color_separator" />

                <com.mobiliya.fleet.customViews.CustomTextViewRegular
                    android:id="@+id/device_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_18"
                    android:text="@string/disconnected"
                    android:textColor="@color/text_color_setting"
                    android:textSize="@dimen/font_16sp" />

                <com.mobiliya.fleet.customViews.CustomTextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/telemetric_device"
                    android:textColor="@color/color_silver"
                    android:textSize="@dimen/font_14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/text_color_separator" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
