<?xml version="1.0" encoding="utf-8"?><!--suppress ALL -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/dim_16"
    android:paddingLeft="@dimen/dim_16"
    android:paddingRight="@dimen/dim_16"
    android:paddingTop="@dimen/dim_16"
    tools:context="com.mobiliya.fleet.activity.BluetoothConnectionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dim_24"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <com.mobiliya.fleet.customViews.CustomTextViewMedium
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_24"
                android:text="@string/forgot_password_header"
                android:textColor="@color/heading_text_color"
                android:textSize="@dimen/font_26sp"
                tools:ignore="RtlHardcoded" />

            <com.mobiliya.fleet.customViews.CustomTextViewMedium
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_24"
                android:layout_marginTop="@dimen/dim_24"
                android:text="@string/enter_your_email_address_to_request_n_password_reset"
                android:textColor="@color/text_color_email_add"
                android:textSize="@dimen/font_14sp"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_24"
                android:layout_marginTop="@dimen/dim_70"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <com.mobiliya.fleet.customViews.CustomEditTextMedium
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_selector"
                    android:drawableLeft="@drawable/mail"
                    android:drawablePadding="@dimen/font_16sp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:paddingStart="@dimen/dim_14"
                    android:textSize="@dimen/font_14sp"
                    tools:ignore="RtlHardcoded" />

                <com.mobiliya.fleet.customViews.CustomTextViewRegular
                    android:id="@+id/forgot_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/dim_40"
                    android:text="@string/forgot_email_empty"
                    android:textColor="@color/deep_carpen_pink"
                    android:textSize="@dimen/font_12sp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/dim_24"
                android:layout_marginRight="@dimen/dim_24"
                android:layout_marginTop="@dimen/dim_70"
                android:gravity="bottom"
                android:orientation="vertical">

                <com.mobiliya.fleet.customViews.CustomButtonMedium
                    android:id="@+id/btn_done"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dim_24"
                    android:layout_marginTop="@dimen/dim_24"
                    android:background="@drawable/login_button_gradient"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dim_18"
                    android:paddingRight="@dimen/dim_18"
                    android:text="@string/request"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color_white"
                    android:textSize="@dimen/font_14sp" />

                <com.mobiliya.fleet.customViews.CustomTextViewMedium
                    android:id="@+id/btn_back"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dim_18"
                    android:paddingRight="@dimen/dim_18"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color_back_button"
                    android:textSize="@dimen/font_14sp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
