<?xml version="1.0" encoding="utf-8"?><!--suppress ALL -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dim_30"
    android:layout_marginRight="@dimen/dim_30"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_8"
        android:orientation="horizontal"
        android:weightSum="10"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <com.mobiliya.fleet.customViews.CustomTextViewBold
                android:id="@+id/units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_97_0"
                android:textColor="@color/text_color_setting"
                android:textSize="@dimen/font_16sp" />

            <com.mobiliya.fleet.customViews.CustomTextViewRegular
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:textColor="@color/color_silver"
                android:textSize="@dimen/font_14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center"
            android:orientation="vertical">

            <com.mobiliya.fleet.customViews.CustomTextViewRegular
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0000_units"
                android:textColor="@color/text_color_setting"
                android:textSize="@dimen/font_14sp" />


        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dim_8"
        android:background="@color/color_silver" />
</LinearLayout>